--- a/07-Bienes-raices/index.html
+++ b/07-Bienes-raices/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BienesRaices.com</title>
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -20,6 +22,139 @@
             </nav>
         </div>
     </header>
+
+    <section class="nosotros contenedor">
+        <div class="imagen">
+            <img src="img/nosotros.jpg" alt="" class="imagen">
+        </div>
+        <div class="contenido-nosotros">
+            <h1>Sobre Nosotros</h1>
+            <p>Fusce augue est, tempor ut dignissim non, pharetra sed orci. Morbi fringilla dignissim blandit. Sed aliquet in nisi eu tincidunt. Cras laoreet at sem in blandit. Nam eu mattis erat, a mattis metus. Sed sem lectus, vestibulum nec dictum ac, rutrum in mi. Maecenas vitae nisl ultricies, ultricies elit ut, pellentesque sem. Etiam turpis mauris, sollicitudin nec nunc ut, consequat molestie sapien.</p>
+        </div>
+    </section>
+
+    <section class="contenedor">
+        <h2>A la venta</h2>
+        <div class="venta">
+            <div class="anuncio destacada">
+                <img src="img/casa1.jpg" alt="">
+                <div class="card">
+                    <h3 class="titulo">Casa 1</h3>
+                    <p>Etiam turpis mauris, sollicitudin nec nunc ut, consequat molestie sapien. Etiam turpis mauris, sollicitudin nec nunc u.</p>
+                    <p>Etiam turpis mauris, sollicitudin nec nunc ut, consequat molestie sapien. Etiam turpis mauris, sollicitudin nec nunc u.</p>
+                    <p>Etiam turpis mauris, sollicitudin nec nunc ut, consequat molestie sapien. Etiam turpis mauris, sollicitudin nec nunc u.</p>
+                    <p class="precio">
+                        Precio: <span>$3,000,000</span>
+                    </p>
+                    <a href="#" class="boton">Más información</a>
+                </div> <!-- Cierre card-->
+            </div> <!--Cierrre anuncio-->
+            <div class="anuncio">
+                <img src="img/casa2.jpg" alt="">
+                <div class="card">
+                    <h3 class="titulo">Casa 2</h3>
+                    <p>Etiam turpis mauris, sollicitudin nec nunc ut, consequat molestie sapien. Etiam turpis mauris, sollicitudin nec nunc u.</p>
+                    <p>Etiam turpis mauris, sollicitudin nec nunc ut, consequat molestie sapien. Etiam turpis mauris, sollicitudin nec nunc u.</p>
+                    <p>Etiam turpis mauris, sollicitudin nec nunc ut, consequat molestie sapien. Etiam turpis mauris, sollicitudin nec nunc u.</p>
+                    <p class="precio">
+                        Precio: <span>$3,000,000</span>
+                    </p>
+                    <a href="#" class="boton">Más información</a>
+                </div> <!-- Cierre card-->
+            </div> <!--Cierrre anuncio-->
+            <div class="anuncio">
+                <img src="img/casa3.jpg" alt="">
+                <div class="card">
+                    <h3 class="titulo">Casa 3</h3>
+                    <p>Etiam turpis mauris, sollicitudin nec nunc ut, consequat molestie sapien. Etiam turpis mauris, sollicitudin nec nunc u.</p>
+                    <p class="precio">
+                        Precio: <span>$3,000,000</span>
+                    </p>
+                    <a href="#" class="boton">Más información</a>
+                </div> <!-- Cierre card-->
+            </div> <!--Cierrre anuncio-->
+            <div class="anuncio">
+                <img src="img/casa4.jpg" alt="">
+                <div class="card">
+                    <h3 class="titulo">Casa 4</h3>
+                    <p>Etiam turpis mauris, sollicitudin nec nunc ut, consequat molestie sapien. Etiam turpis mauris, sollicitudin nec nunc u.</p>
+                    <p class="precio">
+                        Precio: <span>$3,000,000</span>
+                    </p>
+                    <a href="#" class="boton">Más información</a>
+                </div> <!-- Cierre card-->
+            </div> <!--Cierrre anuncio-->
+            <div class="anuncio">
+                <img src="img/casa5.jpg" alt="">
+                <div class="card">
+                    <h3 class="titulo">Casa 15</h3>
+                    <p>Etiam turpis mauris, sollicitudin nec nunc ut, consequat molestie sapien. Etiam turpis mauris, sollicitudin nec nunc u.</p>
+                    <p class="precio">
+                        Precio: <span>$3,000,000</span>
+                    </p>
+                    <a href="#" class="boton">Más información</a>
+                </div> <!-- Cierre card-->
+            </div> <!--Cierrre anuncio-->
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="contenedor">
+            <div class="widget">
+                <h3>Nosotros</h3>
+                <p>Aliquam quam enim, interdum ut sollicitudin non, ferm ntum nec elit. Morbi quis dolor volu que imperdiet felis magna.</p>
+            </div>
+            <div class="widget navegacion">
+                <h3>Navegación</h3>
+                <nav><a href="#">Nosotros</a>
+                    <a href="#">Casas</a>
+                    <a href="#">Contacto</a>
+                </nav>
+            </div>
+            <div class="widget">
+                <h3>Casas a la venta</h3>
+                <div class="contenedor-casas">
+                    <div class="casa">
+                        <div class="foto">
+                            <img src="img/casa2.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <p>Casa 2</p>
+                            <p>$2,000,000</p>
+                        </div>
+                    </div> <!--Casa-->
+                    <div class="casa">
+                        <div class="foto">
+                            <img src="img/casa3.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <p>Casa 3</p>
+                            <p>$2,000,000</p>
+                        </div>
+                    </div> <!--Casa-->
+                    <div class="casa">
+                        <div class="foto">
+                            <img src="img/casa4.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <p>Casa 4</p>
+                            <p>$2,000,000</p>
+                        </div>
+                    </div> <!--Casa-->
+                    <div class="casa">
+                        <div class="foto">
+                            <img src="img/casa5.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <p>Casa 5</p>
+                            <p>$2,000,000</p>
+                        </div>
+                    </div> <!--Casa-->
+                </div>
+            </div>
+        </div> <!--Cierra contenedor-->
+        <p class="copyright">Derechos Reservados Bienes Raices 2022</p>
+    </footer>
     
 </body>
 </html>
